♻️ lets try a different package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "care",
+  "name": "fume.care",
   "version": "0.0.2",
   "description": "Fume Care Nuxt module",
   "repository": "fumeapp/care",
