--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 shamefully-hoist=true
 strict-peer-dependencies=false
-@acidjazz:registry=https://npm.pkg.github.com/
+registry=https://npm.pkg.github.com
