--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.16.1"
+    "@nuxt/kit": "^3.16.1",
+    "defu": "^6.1.4"
   },
   "devDependencies": {
     "@nuxt/devtools": "^2.3.0",
