--- a/package.json
+++ b/package.json
@@ -32,27 +32,28 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.16.1",
+    "@nuxt/kit": "^3.17.2",
     "defu": "^6.1.4"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^2.3.1",
-    "@nuxt/eslint-config": "^1.2.0",
-    "@nuxt/module-builder": "^0.8.4",
-    "@nuxt/schema": "^3.16.1",
-    "@nuxt/test-utils": "^3.17.2",
-    "@types/node": "^22.13.10",
+    "@nuxt/devtools": "^2.4.0",
+    "@nuxt/eslint-config": "^1.3.0",
+    "@nuxt/module-builder": "^1.0.1",
+    "@nuxt/schema": "^3.17.2",
+    "@nuxt/test-utils": "^3.18.0",
+    "@types/node": "^22.15.17",
     "changelogen": "^0.6.1",
-    "eslint": "^9.22.0",
-    "nuxt": "^3.16.1",
-    "typescript": "~5.8.2",
-    "vitest": "^3.0.9",
-    "vue-tsc": "^2.2.8"
+    "eslint": "^9.26.0",
+    "nuxt": "^3.17.2",
+    "typescript": "~5.8.3",
+    "vitest": "^3.1.3",
+    "vue-tsc": "^2.2.10"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
-      "esbuild"
+      "esbuild",
+      "unrs-resolver"
     ]
   }
 }
