--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/types.d.ts",
-      "import": "./dist/module.mjs",
-      "require": "./dist/module.cjs"
+      "types": "./dist/types.d.mts",
+      "import": "./dist/module.mjs"
+    },
+    "./utils": "./dist/utils.mjs"
+  },
+  "main": "./dist/module.mjs",
+  "typesVersions": {
+    "*": {
+      ".": [
+        "./dist/types.d.mts"
+      ],
+      "utils": [
+        "./dist/utils.d.mts"
+      ]
     }
   },
-  "main": "./dist/module.cjs",
-  "types": "./dist/types.d.ts",
   "files": [
     "dist"
   ],
@@ -32,19 +41,19 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.17.2",
+    "@nuxt/kit": "^3.17.3",
     "defu": "^6.1.4"
   },
   "devDependencies": {
     "@nuxt/devtools": "^2.4.0",
-    "@nuxt/eslint-config": "^1.3.0",
+    "@nuxt/eslint-config": "^1.3.1",
     "@nuxt/module-builder": "^1.0.1",
-    "@nuxt/schema": "^3.17.2",
+    "@nuxt/schema": "^3.17.3",
     "@nuxt/test-utils": "^3.18.0",
     "@types/node": "^22.15.17",
     "changelogen": "^0.6.1",
     "eslint": "^9.26.0",
-    "nuxt": "^3.17.2",
+    "nuxt": "^3.17.3",
     "typescript": "~5.8.3",
     "vitest": "^3.1.3",
     "vue-tsc": "^2.2.10"
